...
/*


//- (UIButton *)payBtn{
//    if (!_payBtn){
//        _payBtn = [[UIButton alloc] initWithFrame:CGRectMake(0, SCRREN_HEIGHT - 50, SCRREN_WIDTH, 50)];
//        [_payBtn setTitle:@"立即支付" forState:UIControlStateNormal];
//        _payBtn.backgroundColor = RGBCOLOR(33, 143, 230);
//        [_payBtn setTintColor:[UIColor whiteColor]];
//        
//        [_payBtn addTarget:self action:@selector(getPreparePayOrderPayWay) forControlEvents:UIControlEventTouchUpInside];
//        
////        [self.view addSubview:_payBtn];
...
//    [self.tableView reloadData];
//    self.tableView.tableHeaderView = nil;
//    self.payBtn.hidden = YES;
    
    //默认title
    if (![self.navigationItem.title isNotNull]){
        self.navigationItem.title = @"支付";
    }
    
    //默认图片路径
    if (![self.bundleName isNotNull]){
        self.bundleName = @"WhaleResources";
    }
...
                    cell.infoLbl.text = receipt.info;
                }else if ([type isEqualToString:@"weixin"] && [receipt.type isEqualToString:@"weixin"]){
                    //微信
                    cell.moneyLbl.text = receipt.money;
                    cell.infoLbl.text = receipt.info;
                }else if ([type isEqualToString:@"lhq"] && [receipt.type isEqualToString:@"lhq"]){
                    //邻花钱
                    cell.moneyLbl.text = receipt.money;
                    cell.infoLbl.text = receipt.info;
                }else{
                    //其他
                }
            }
...
