...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TW0-W9-ZuW">
                                <rect key="frame" x="0.0" y="254" width="375" height="30"/>
                                <color key="backgroundColor" red="0.34001991040000001" green="1" blue="0.1631161223" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="m2N-Ey-9Ld"/>
                                </constraints>
                                <state key="normal" title="全部默认"/>
                                <connections>
                                    <action selector="payAction8" destination="UhN-lC-tLH" eventType="touchUpInside" id="V75-Je-5hS"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IZP-Lg-eEu">
                                <rect key="frame" x="0.0" y="286" width="375" height="30"/>
...
